@@ -42,7 +42,6 @@ import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.web.error.ErrorAttributeOptions;
 import org.springframework.boot.web.servlet.error.ErrorAttributes;
-import org.springframework.data.mapping.PropertyReferenceException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -111,7 +110,7 @@ public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
             httpClientResponseBody = objectMapper.readValue(ex.getResponseBodyAsString(),
                 new TypeReference<List<Map<String, String>>>() {
                 })
-                .get(0);
+                .getFirst();
         } else {
             httpClientResponseBody = objectMapper.readValue(ex.getResponseBodyAsString(), new TypeReference<>() {
             });
@@ -744,21 +743,37 @@ public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     /**
-     * Method intercepts exception {@link PropertyReferenceException}. Thrown when
-     * an invalid property is used in the sort parameter for a Pageable request.
+     * Method intercepts exception {@link JsonResponseParseException}.
      *
      * @param ex      Exception that should be intercepted.
      * @param request Contains details about the occurred exception.
      * @return {@code ResponseEntity} which contains the HTTP status and body with
      *         the exception message.
      */
-    @ExceptionHandler(PropertyReferenceException.class)
-    public final ResponseEntity<Object> handlePropertyReferenceException(PropertyReferenceException ex,
+    @ExceptionHandler(JsonResponseParseException.class)
+    public final ResponseEntity<Object> handleJsonResponseParseException(JsonResponseParseException ex,
         WebRequest request) {
         log.error(ex.getMessage(), ex);
         ExceptionResponse exceptionResponse = new ExceptionResponse(getErrorAttributes(request));
-        exceptionResponse.setMessage(String.format(ErrorMessage.INVALID_SORT_VALUE_EXCEPTION, ex.getPropertyName()));
+        exceptionResponse.setMessage(ex.getMessage());
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(exceptionResponse);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(exceptionResponse);
+    }
+
+    /**
+     * Method intercepts exception {@link OpenAIResponseException}.
+     *
+     * @param ex      Exception that should be intercepted.
+     * @param request Contains details about the occurred exception.
+     * @return {@code ResponseEntity} which contains the HTTP status and body with
+     *         the exception message.
+     */
+    @ExceptionHandler(OpenAIRequestException.class)
+    public final ResponseEntity<Object> handleOpenAIResponseException(OpenAIRequestException ex, WebRequest request) {
+        log.error(ex.getMessage(), ex);
+        ExceptionResponse exceptionResponse = new ExceptionResponse(getErrorAttributes(request));
+        exceptionResponse.setMessage(ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(exceptionResponse);
     }
 }
